Fix animation transform animation ending glitch with backface-visibility hidden

--- a/css/style.css
+++ b/css/style.css
@@ -69,7 +69,8 @@ body {
   color: #fff;
   text-transform: uppercase;
   margin-bottom: 6rem;
-  user-select: none; }
+  user-select: none;
+  backface-visibility: hidden; }
   .heading-primary--main {
     display: block;
     font-size: 6rem;
@@ -101,7 +102,8 @@ body {
   color: transparent;
   transition: all .2s;
   letter-spacing: 2px;
-  user-select: none; }
+  user-select: none;
+  backface-visibility: hidden; }
   .heading-secondary:hover {
     transform: skewX(-20deg);
     text-shadow: 0.5rem 1rem 2rem rgba(0, 0, 0, 0.2); }
@@ -295,7 +297,8 @@ body {
     background-image: linear-gradient(to right, #55c57a, #28b485);
     display: inline-block;
     -webkit-background-clip: text;
-    color: transparent; }
+    color: transparent;
+    backface-visibility: hidden; }
 
 .story {
   width: 75%;
@@ -613,7 +616,8 @@ body {
     text-decoration: none;
     text-transform: uppercase;
     display: inline-block;
-    transition: all .2s; }
+    transition: all .2s;
+    backface-visibility: hidden; }
   .footer__link:hover, .footer__link:active {
     color: #7ed56f;
     box-shadow: 0 1rem 2rem rgba(0, 0, 0, 0.4);
