--- a/sass/components/_feature-box.scss
+++ b/sass/components/_feature-box.scss
@@ -1,5 +1,4 @@
 .feature-box {
-
   background-color: rgba($color-white, .8);
   font-size: 1.5rem;
   padding: 2.5rem;
@@ -8,7 +7,7 @@
   box-shadow: 0 1.5rem 3.5rem rgba($color-black, .15);
   transition: transform .3s;
   user-select: none;
-  
+
   &:hover {
     transform: translateY(-1.5rem) scale(1.03);
     box-shadow: 0 1.5rem 5.5rem rgba($color-black, .15);
@@ -21,5 +20,6 @@
     display: inline-block;
     -webkit-background-clip: text;
     color: transparent;
+    backface-visibility: hidden;
   }
 }
