--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -40,6 +40,7 @@
       text-transform: uppercase;
       display: inline-block;
       transition: all .2s;
+      backface-visibility: hidden;
     }
 
     &:hover, &:active {
